--- a/Pitch/View/AgeCell.xib
+++ b/Pitch/View/AgeCell.xib
@@ -12,24 +12,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AgeCell" rowHeight="76" id="KGk-i7-Jjw" customClass="AgeCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="152"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AgeCell" rowHeight="47" id="KGk-i7-Jjw" customClass="AgeCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="151.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age Limits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URi-Pk-aQi">
-                        <rect key="frame" x="5" y="5" width="75" height="36.5"/>
+                        <rect key="frame" x="5" y="5" width="75" height="32.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35S-PC-qJw">
-                        <rect key="frame" x="10" y="51.5" width="300" height="90"/>
+                        <rect key="frame" x="5" y="42.5" width="310" height="80"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tsc-6a-hL2" customClass="MBCircularProgressBarView">
-                                <rect key="frame" x="50" y="10" width="70" height="70"/>
+                                <rect key="frame" x="50" y="5" width="70" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qnT-bY-BbY">
                                         <rect key="frame" x="20" y="20" width="30" height="30"/>
@@ -74,7 +74,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LDJ-zA-a2R" customClass="MBCircularProgressBarView">
-                                <rect key="frame" x="170" y="10" width="70" height="70"/>
+                                <rect key="frame" x="170" y="5" width="70" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCm-wK-a3S">
                                         <rect key="frame" x="20" y="20" width="30" height="30"/>
@@ -121,7 +121,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="tsc-6a-hL2" firstAttribute="centerY" secondItem="35S-PC-qJw" secondAttribute="centerY" id="0u1-1n-hyL"/>
-                            <constraint firstItem="tsc-6a-hL2" firstAttribute="top" secondItem="35S-PC-qJw" secondAttribute="top" constant="10" id="B0B-uu-g6C"/>
+                            <constraint firstItem="tsc-6a-hL2" firstAttribute="top" secondItem="35S-PC-qJw" secondAttribute="top" constant="5" id="B0B-uu-g6C"/>
                             <constraint firstItem="LDJ-zA-a2R" firstAttribute="leading" secondItem="tsc-6a-hL2" secondAttribute="trailing" constant="50" id="B1w-lI-QNH"/>
                             <constraint firstItem="LDJ-zA-a2R" firstAttribute="centerY" secondItem="tsc-6a-hL2" secondAttribute="centerY" id="Dhb-th-7JI"/>
                             <constraint firstItem="tsc-6a-hL2" firstAttribute="leading" secondItem="35S-PC-qJw" secondAttribute="leading" constant="50" id="Jen-Ty-7ZL"/>
@@ -130,11 +130,11 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="35S-PC-qJw" secondAttribute="bottom" constant="10" id="1sv-gp-lEO"/>
-                    <constraint firstItem="35S-PC-qJw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="2Ik-0Q-LfV"/>
-                    <constraint firstItem="35S-PC-qJw" firstAttribute="top" secondItem="URi-Pk-aQi" secondAttribute="bottom" constant="10" id="Qzg-rU-SEX"/>
+                    <constraint firstAttribute="bottom" secondItem="35S-PC-qJw" secondAttribute="bottom" id="1sv-gp-lEO"/>
+                    <constraint firstItem="35S-PC-qJw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="2Ik-0Q-LfV"/>
+                    <constraint firstItem="35S-PC-qJw" firstAttribute="top" secondItem="URi-Pk-aQi" secondAttribute="bottom" constant="5" id="Qzg-rU-SEX"/>
                     <constraint firstItem="URi-Pk-aQi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="hMl-T8-Xpr"/>
-                    <constraint firstAttribute="trailing" secondItem="35S-PC-qJw" secondAttribute="trailing" constant="10" id="kfQ-dQ-Yg9"/>
+                    <constraint firstAttribute="trailing" secondItem="35S-PC-qJw" secondAttribute="trailing" constant="5" id="kfQ-dQ-Yg9"/>
                     <constraint firstItem="URi-Pk-aQi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="zTp-RH-Ab7"/>
                 </constraints>
             </tableViewCellContentView>
@@ -145,7 +145,7 @@
                 <outlet property="subview" destination="35S-PC-qJw" id="nxm-8x-Tdb"/>
                 <outlet property="titleLabel" destination="URi-Pk-aQi" id="V5e-Ir-ePW"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="160.11994002998503"/>
+            <point key="canvasLocation" x="137.59999999999999" y="147.07646176911544"/>
         </tableViewCell>
     </objects>
 </document>
