--- a/Pitch/View/DistanceCell.xib
+++ b/Pitch/View/DistanceCell.xib
@@ -12,33 +12,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleAspectFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DistanceCell" rowHeight="116" id="KGk-i7-Jjw" customClass="DistanceCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="116"/>
+        <tableViewCell contentMode="scaleAspectFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DistanceCell" rowHeight="102" id="KGk-i7-Jjw" customClass="DistanceCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="115.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="101.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKY-o4-fyc">
-                        <rect key="frame" x="5" y="5" width="63" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Rd8-Q0-CMm"/>
-                        </constraints>
+                        <rect key="frame" x="5" y="5" width="63" height="26.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5D-qC-lbV">
-                        <rect key="frame" x="271" y="16" width="38" height="21"/>
+                        <rect key="frame" x="277" y="5" width="38" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dyA-07-5qb">
-                        <rect key="frame" x="10" y="45" width="300" height="60"/>
+                        <rect key="frame" x="5" y="36.5" width="310" height="60"/>
                         <subviews>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="3Z8-Su-Pge">
-                                <rect key="frame" x="3" y="5" width="294" height="51"/>
+                                <rect key="frame" x="3" y="5" width="304" height="56"/>
                                 <connections>
                                     <action selector="sliderDidSlide:" destination="KGk-i7-Jjw" eventType="valueChanged" id="nYw-72-Wk2"/>
                                 </connections>
@@ -46,7 +43,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="3Z8-Su-Pge" secondAttribute="bottom" constant="5" id="Cvr-Db-3ik"/>
+                            <constraint firstAttribute="bottom" secondItem="3Z8-Su-Pge" secondAttribute="bottom" id="Cvr-Db-3ik"/>
                             <constraint firstAttribute="height" constant="60" id="QMe-uk-ZrV"/>
                             <constraint firstItem="3Z8-Su-Pge" firstAttribute="leading" secondItem="dyA-07-5qb" secondAttribute="leading" constant="5" id="TKK-6Q-J5m"/>
                             <constraint firstAttribute="trailing" secondItem="3Z8-Su-Pge" secondAttribute="trailing" constant="5" id="WkV-Hq-aOq"/>
@@ -56,12 +53,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="NKY-o4-fyc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Aqi-EF-Tig"/>
-                    <constraint firstItem="dyA-07-5qb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Bgx-mO-ckO"/>
-                    <constraint firstAttribute="bottom" secondItem="dyA-07-5qb" secondAttribute="bottom" constant="10" id="Gow-rl-Pv1"/>
-                    <constraint firstItem="X5D-qC-lbV" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="5" id="OER-bK-9Py"/>
-                    <constraint firstItem="dyA-07-5qb" firstAttribute="top" secondItem="NKY-o4-fyc" secondAttribute="bottom" constant="10" id="eFh-La-Lf7"/>
-                    <constraint firstAttribute="trailing" secondItem="dyA-07-5qb" secondAttribute="trailing" constant="10" id="ebd-R2-r2J"/>
-                    <constraint firstItem="X5D-qC-lbV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="t0X-Yd-wdx"/>
+                    <constraint firstItem="dyA-07-5qb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Bgx-mO-ckO"/>
+                    <constraint firstAttribute="bottom" secondItem="dyA-07-5qb" secondAttribute="bottom" constant="5" id="Gow-rl-Pv1"/>
+                    <constraint firstItem="dyA-07-5qb" firstAttribute="top" secondItem="NKY-o4-fyc" secondAttribute="bottom" constant="5" id="eFh-La-Lf7"/>
+                    <constraint firstAttribute="trailing" secondItem="dyA-07-5qb" secondAttribute="trailing" constant="5" id="ebd-R2-r2J"/>
+                    <constraint firstAttribute="trailing" secondItem="X5D-qC-lbV" secondAttribute="trailing" constant="5" id="qxa-bZ-NTp"/>
+                    <constraint firstItem="X5D-qC-lbV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="sHR-DU-gSA"/>
                     <constraint firstItem="NKY-o4-fyc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="vXf-r3-dP5"/>
                 </constraints>
             </tableViewCellContentView>
@@ -72,7 +69,7 @@
                 <outlet property="subview" destination="dyA-07-5qb" id="Ekv-xz-saI"/>
                 <outlet property="titleLabel" destination="NKY-o4-fyc" id="9ZY-d2-Hwr"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="161.91904047976013"/>
+            <point key="canvasLocation" x="137.59999999999999" y="155.62218890554723"/>
         </tableViewCell>
     </objects>
 </document>
