--- a/Pitch/Views/Create Event Views/EventPictureCell.xib
+++ b/Pitch/Views/Create Event Views/EventPictureCell.xib
@@ -12,26 +12,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="EventPictureCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="211" id="KGk-i7-Jjw" customClass="EventPictureCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="211"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="210.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload Event Picture" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APh-ub-eK8">
-                        <rect key="frame" x="5" y="5" width="150" height="18"/>
+                        <rect key="frame" x="5" y="5" width="150" height="45.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_profile" translatesAutoresizingMaskIntoConstraints="NO" id="lEn-Hr-9hc">
+                        <rect key="frame" x="10" y="55.5" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="5sP-f0-JnX"/>
+                            <constraint firstAttribute="width" constant="150" id="oIb-hm-Vkh"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="APh-ub-eK8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="7bT-WA-HJ2"/>
+                    <constraint firstAttribute="bottom" secondItem="lEn-Hr-9hc" secondAttribute="bottom" constant="5" id="8Wg-na-ewX"/>
                     <constraint firstItem="APh-ub-eK8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Nkh-D0-zR6"/>
+                    <constraint firstItem="lEn-Hr-9hc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="kX2-ID-AKr"/>
+                    <constraint firstAttribute="trailing" secondItem="lEn-Hr-9hc" secondAttribute="trailing" constant="10" id="ts3-qu-E1S"/>
+                    <constraint firstItem="lEn-Hr-9hc" firstAttribute="top" secondItem="APh-ub-eK8" secondAttribute="bottom" constant="5" id="vPl-fN-Fip"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <point key="canvasLocation" x="137.68115942028987" y="161.71875"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="default_profile" width="494" height="495"/>
+    </resources>
 </document>
