--- a/Pitch/Views/Create Event Views/PollsTitleCell.xib
+++ b/Pitch/Views/Create Event Views/PollsTitleCell.xib
@@ -12,42 +12,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PollsTitleCell" rowHeight="102" id="KGk-i7-Jjw" customClass="PollsTitleCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PollsTitleCell" rowHeight="162" id="KGk-i7-Jjw" customClass="PollsTitleCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="152"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="91.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="151.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Polls" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxA-aY-wzs">
-                        <rect key="frame" x="5" y="15" width="34.5" height="23.5"/>
+                        <rect key="frame" x="5" y="15" width="34.5" height="18.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8j-iG-QJV">
-                        <rect key="frame" x="10" y="46.5" width="300" height="40"/>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l15-AV-pJz">
+                        <rect key="frame" x="5" y="38.5" width="310" height="50"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="oDY-6r-R5s"/>
+                            <constraint firstAttribute="height" constant="50" id="gax-A7-ygN"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <state key="normal" title="Add Poll"/>
-                    </button>
+                    </tableView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="cxA-aY-wzs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="6Te-DH-OSM"/>
-                    <constraint firstAttribute="trailing" secondItem="a8j-iG-QJV" secondAttribute="trailing" constant="10" id="NqF-6e-L0x"/>
-                    <constraint firstAttribute="bottom" secondItem="a8j-iG-QJV" secondAttribute="bottom" constant="5" id="Ten-mC-sQU"/>
-                    <constraint firstItem="a8j-iG-QJV" firstAttribute="top" secondItem="cxA-aY-wzs" secondAttribute="bottom" constant="8" id="d4Z-z5-hGr"/>
-                    <constraint firstItem="a8j-iG-QJV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="nw7-Iz-C43"/>
+                    <constraint firstAttribute="bottom" secondItem="l15-AV-pJz" secondAttribute="bottom" constant="100" id="6qA-51-BXi"/>
+                    <constraint firstItem="l15-AV-pJz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="H9F-cX-fnm"/>
+                    <constraint firstAttribute="trailing" secondItem="l15-AV-pJz" secondAttribute="trailing" constant="5" id="UQY-Wo-vnO"/>
+                    <constraint firstItem="l15-AV-pJz" firstAttribute="top" secondItem="cxA-aY-wzs" secondAttribute="bottom" constant="5" id="h7t-Ao-YqI"/>
                     <constraint firstItem="cxA-aY-wzs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="qAl-b4-yK4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <connections>
-                <outlet property="addPollButton" destination="a8j-iG-QJV" id="WVj-pe-POt"/>
-            </connections>
-            <point key="canvasLocation" x="47.826086956521742" y="51.5625"/>
+            <point key="canvasLocation" x="46.399999999999999" y="77.361319340329842"/>
         </tableViewCell>
     </objects>
 </document>
