--- a/Pitch/View Controllers/CreateEventViewController.xib
+++ b/Pitch/View Controllers/CreateEventViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateEventViewController">
             <connections>
+                <outlet property="backButton" destination="Pyx-8Z-u89" id="unQ-1I-cbP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,9 +20,31 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pyx-8Z-u89">
+                    <rect key="frame" x="15" y="45" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="X1V-hr-Cql"/>
+                        <constraint firstAttribute="height" constant="30" id="hCT-sP-qTb"/>
+                    </constraints>
+                    <state key="normal" title="Back" image="back">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="mAe-55-tQT"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Pyx-8Z-u89" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="25" id="H5U-7m-Wg5"/>
+                <constraint firstItem="Pyx-8Z-u89" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="bXK-Hi-gHy"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="136.80000000000001" y="129.98500749625188"/>
         </view>
     </objects>
+    <resources>
+        <image name="back" width="500" height="550"/>
+    </resources>
 </document>
